--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: headers;
-    src: url(img/SentyTEApro.ttf);
+    src: url(https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/SentyTEApro.ttf);
 }
 
 #bigImg {
