--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: headers;
-    src: url(https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/SentyTEApro.ttf);
-}
-
 #bigImg {
     filter: alpha(opacity=70);
     -moz-opacity: 0.7;
@@ -24,7 +19,7 @@ div#bgc {
 }
 
 h1 {
-    font-family: headers;
+    font-family: 'Open Sans', sans-serif;
     position: absolute;
     left: 30%;
     top: 25%;
