--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: header;
+    src: url('img/SentyTEApro.ttf');
+}
+
 #bigImg {
     filter: alpha(opacity=70);
     -moz-opacity: 0.7;
