--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: header;
-    src: url('https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/SentyTEApro.ttf');
-}
-
 #bigImg {
     filter: alpha(opacity=70);
     -moz-opacity: 0.7;
@@ -24,11 +19,11 @@ div#bgc {
 }
 
 h1 {
-    font-family: header;
+    font-family: 华文隶书;
     position: absolute;
-    left: 30%;
+    left: 27%;
     top: 25%;
-    font-size: 5em;
+    font-size: 6em;
 }
 
 #start-btn {
